# Swoosh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Swoosh.sln
.github/: FUNDING.yml
ExampleDemo/: Button.h  CustomRenderer.h  Demo.cpp  ResourcePaths.h  SaveFile.h  TextureLoader.h
ExampleDemo/Scenes/: AboutScene.h  DemoScene.h  GameplayScene.h  HiscoreScene.h  MainMenuScene.h
ExampleDemo/Swoosh/: Button.h  Demo.cpp  Particle.h  ResourcePaths.h  SaveFile.h  Swoosh.vcxproj  Swoosh.vcxproj.filters  TextureLoader.h
ExampleDemo/Swoosh/DemoActivities/: DemoScene.h  MainMenuScene.h  aboutscene.h  hiscorescene.h
ExampleDemo/Swoosh/DemoSegues/: PageTurn.h  blendfadein.h  checkerboard.h  slidein.h
ExampleDemo/Swoosh/Release/: Swoosh.pch
ExampleDemo/x64/Debug/: Swoosh.ilk
Swoosh/: AboutScene.h  Activity.h  ActivityController.h  BlendFadeIn.h  Checkerboard.h  Collision.h  DemoScene.h  Ease.h  EaseFunctions.h  Example.cpp  Game.h  GameOverScene.h  HiScoreScene.h  MainMenuScene.h  Particle.h  ResourcePaths.h  SaveFile.h  Segue.h  SlideIn.h  Swoosh.vcxproj  Swoosh.vcxproj.filters  TextureLoader.h  Timer.h  WhiteWashFade.h
Swoosh/Debug/: Swoosh.pch  vc141.idb
Swoosh/Debug/Swoosh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Swoosh.lastbuildstate
Swoosh/DemoActivities/: MainMenuScene.h  aboutscene.h
Swoosh/DemoSegues/: WhiteWashFade.h  checkerboard.h
Swoosh/Release/Swoosh.tlog/: CL.command.1.tlog  Swoosh.lastbuildstate
cmake/: Compiler.cmake  Config.cmake  PostBuild.cmake
src/Segues/: BlackWashFade.h  BlendFadeIn.h  BlurFadeIn.h  Checkerboard.h  CircleClose.h  CircleOpen.h  CrossZoom.h  Cube3D.h  DiamondTileCircle.h  DiamondTileSwipe.h  Dream.h  HorizontalOpen.h  HorizontalSlice.h  Morph.h  PageTurn.h  PixelateBlackWashFade.h  PushIn.h  RadialCCW.h  RetroBlit.h  SlideIn.h  SwipeIn.h  VerticalOpen.h  VerticalSlice.h  WhiteWashFade.h  ZoomFadeIn.h  ZoomFadeInBounce.h  ZoomIn.h  ZoomOut.h
src/Swoosh/: ActionList.h  Activity.h  ActivityController.h  Ease.h  EmbedGLSL.h  Game.h  PersistentActivityController.h  Segue.h  Shaders.h  Timer.h
x64/Debug/: Swoosh.ilk
(+32 files in other folders)
